# SwiftCart

./: AdminScreen.cpp  Application.cpp  CMakeLists.txt  CartScreen.cpp  LoginScreen.cpp  LoginScreen.hpp  Platform.h  ProductListScreen.cpp  ProductListScreen.hpp  README.md  RegisterScreen.cpp  RegisterScreen.hpp  Screen.hpp  SellerScreen.cpp  Transaction.cpp  Transaction.h  UIManager.cpp  UIManager.hpp  User.h  admins.txt
gui/: main_gui.cpp
gui/include/: AllScreens.hpp  Application.hpp
gui/include/screens/: AdminScreen.hpp  CartScreen.hpp  CustomerScreen.hpp  OrderScreen.hpp  SellerScreen.hpp
gui/screens/: CustomerScreen.cpp  OrderScreen.cpp
src/: FileHandler.cpp  FileHandler.h  Platform.cpp  Product.cpp  Product.h  User.cpp  main_console.cpp
